Tue Jul  8 12:20:11 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* python/libxml_wrap.h: applied patch from #116943 which should
	  fix the xsltSaveResultToFile python binding.

Mon Jul  7 11:03:18 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* INSTALL: removed an old reference to libxml2 >= 2.2.12

Sun Jul  6 23:57:35 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* configure.in: releasing 1.0.31
	* doc/*: update and rebuild of the docs

Sun Jul  6 18:31:56 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fixing bug #115913 for xsl:copy with namespace
	  nodes.
	* tests/docs/Makefile.am tests/docs/bug-122.*
	  tests/general/Makefile.am tests/general/bug-122*: added the
	  test to the regression suite.
	
Sun Jul  6 18:09:13 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/preproc.c: fix bug #115778 for attribute value template
	  on xsl:sort order

Sun Jul  6 17:22:35 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/documents.c libxslt/transform.c: applied patch from
	  Keith Isdale to desactivate node numbering when running under
	  the debugger.

Sun Jul  6 00:00:31 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/security.c: fix the write checking code when
	  the output filename does not parse as an URL bug #115402

Sun Jun 22 19:38:04 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/Makefile.am: Albert Chin pointed out that trio.h and
	  triodef.h were missing from the distribution

Fri Jun 13 16:53:33 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt.spec.in libexslt/Makefile.am libexslt/libexslt.3
	  libxslt/Makefile.am libxslt/libxslt.3: Moved the man pages
	  to section 3
	* libexslt/sets.c: applied patch from Peter Breitenlohner
	* doc/*: rebuilt the docs
	* tests/docbook/result//* tests/xmlspec/*.html: changes in
	  generattion of &quot; as " in element content.

Sun Jun 08 22:57:13 CEST 2003 Igor Zlatkovic <igor@zlatkovic.com>
