@@ -24,6 +24,14 @@
       <arg name='f' type='pythonObject' info='the python function'/>
       <arg name='ctx' type='pythonObject' info='a context for the callback'/>
     </function>
+    <function name='xsltRegisterExtModuleElement' file='python'>
+      <info>Register a Python written element to the XSLT engine</info>
+      <return type='int' info="0 in case of success, -1 in case of error"/>
+      <arg name='name' type='xmlChar *' info='the element name'/>
+      <arg name='URI' type='xmlChar *' info='the namespace or NULL'/>
+      <arg name='precompile' type='pythonObject' info='method called when stylesheet is compiled'/>
+      <arg name='transform' type='pythonObject' info='method called during transform, must not modify stylesheet'/>
+    </function>
     <function name='xsltRegisterExtModuleFunction' file='python'>
       <info>Register a Python written function to the XSLT engine</info>
       <return type='int' info="0 in case of success, -1 in case of error"/>
