@@ -3,6 +3,7 @@ EXAMPLE_DIR = $(datadir)/doc/libxslt-python-$(LIBXSLT_VERSION)/examples
 TESTSPY=	\
     basic.py	\
     exslt.py	\
+    extelem.py	\
     extfunc.py
 
 XMLS=		\
