@@ -1,3 +1,12 @@
+Wed Jul  9 12:19:34 CEST 2003 Daniel Veillard <daniel@veillard.com>
+
+	* python/generator.py python/libxslt-python-api.xml python/libxslt.c
+	  python/libxslt_wrap.h python/libxsltclass.txt: patch from
+	  Sean Treadway, adding Python bindings for extension element and
+	  some bindings cleanups.
+	* python/tests/Makefile.am python/tests/extelem.py: also add an
+	  example/test.
+
 Tue Jul  8 12:20:11 CEST 2003 Daniel Veillard <daniel@veillard.com>
 
 	* python/libxml_wrap.h: applied patch from #116943 which should
